--- a/templates/docs/examples/patterns/forms/form-validation.html
+++ b/templates/docs/examples/patterns/forms/form-validation.html
@@ -7,7 +7,7 @@
 <form>
   <div class="p-form-validation is-error">
     <label for="exampleTextInputError">Email address</label>
-    <input class="p-form-validation__input" type="text" id="exampleTextInputError" name="exampleTextInputError" placeholder="example@canonical.com" />
+    <input class="p-form-validation__input" type="email" id="exampleTextInputError" placeholder="example@canonical.com" name="exampleTextInputError" autocomplete="email" />
     <p class="p-form-validation__message">
       <strong>Error:</strong> This field is required.
     </p>
@@ -15,7 +15,7 @@
 
   <div class="p-form-validation is-caution">
     <label for="exampleTextInputCaution">Mail configuration ID</label>
-    <input class="p-form-validation__input" type="text" id="exampleTextInputCaution" name="exampleTextInputCaution" placeholder="14" />
+    <input class="p-form-validation__input" type="text" id="exampleTextInputCaution" placeholder="14" name="exampleTextInputCaution" autocomplete="on"/>
     <p class="p-form-validation__message">
       <strong>Caution:</strong> No validation is performed in preview mode.
     </p>
@@ -23,7 +23,7 @@
 
   <div class="p-form-validation is-success">
     <label for="exampleTextInputSuccess">Card number</label>
-    <input class="p-form-validation__input" type="text" id="exampleTextInputSuccess" name="exampleTextInputSuccess" placeholder="**** **** **** ****" />
+    <input class="p-form-validation__input" type="text" id="exampleTextInputSuccess" placeholder="**** **** **** ****" name="exampleTextInputSuccess" autocomplete="off"/>
     <p class="p-form-validation__message">
       <strong>Success:</strong> Verified.
     </p>
