--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -110,7 +110,7 @@
 </div>
 
 <div class="u-fixed-width">
-  <input class="p-button--positive" type="submit" value="Submit" />
+  <input class="p-button--positive" type="submit" value="Submit" name="submit"/>
 </div>
 
 <div class="row">
