--- a/templates/docs/examples/patterns/search-box/navigation-dark.html
+++ b/templates/docs/examples/patterns/search-box/navigation-dark.html
@@ -27,7 +27,7 @@
         <li class="p-navigation__item"><a class="p-navigation__link" href="#">Partners</a></li>
       </ul>
       <form class="p-search-box is-dark">
-        <input aria-label="search" type="search" class="p-search-box__input" name="search" placeholder="Search" required>
+        <input type="search" class="p-search-box__input" name="search" placeholder="Search" required autocomplete="on">
         <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
         <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
       </form>
