--- a/templates/docs/examples/templates/maas-layout.html
+++ b/templates/docs/examples/templates/maas-layout.html
@@ -121,7 +121,7 @@
     </div>
     <div class="col-9">
       <form class="p-search-box">
-        <input aria-label="search" type="search" class="p-search-box__input" name="search" placeholder="Search" required>
+        <input aria-label="search" type="search" class="p-search-box__input" name="search" placeholder="Search" required autocomplete="on">
         <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
         <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
       </form>
