--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -38,7 +38,7 @@
       </div>
       <div class="col-3">
         <form>
-          <input type="text" placeholder="Enter email">
+          <input name="email" type="email" placeholder="Enter email" autocomplete="email">
           <select name="" id=""></select>
         </form>
       </div>
