--- a/templates/docs/examples/templates/typographic-spacing.html
+++ b/templates/docs/examples/templates/typographic-spacing.html
@@ -299,7 +299,7 @@
     <label for="exampleInputEmail1">Email address</label>
   </div>
   <div class="flex-col">
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail1" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <button>Button</button>
@@ -352,11 +352,11 @@
   </div>
   <div class="flex-col">
     <h1>h1</h1>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail3">Email address</label>
   </div>
   <div class="flex-col">
     <h1>h1</h1>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail3" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <h1>h1</h1>
@@ -418,11 +418,11 @@
   </div>
   <div class="flex-col">
     <h2>h2</h2>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail4">Email address</label>
   </div>
   <div class="flex-col">
     <h2>h2</h2>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail4" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <h2>h2</h2>
@@ -484,11 +484,11 @@
   </div>
   <div class="flex-col">
     <h3>h3</h3>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail5">Email address</label>
   </div>
   <div class="flex-col">
     <h3>h3</h3>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail5" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <h3>h3</h3>
@@ -550,11 +550,11 @@
   </div>
   <div class="flex-col">
     <h4>h4</h4>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail6">Email address</label>
   </div>
   <div class="flex-col">
     <h4>h4</h4>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail6" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <h4>h4</h4>
@@ -616,11 +616,11 @@
   </div>
   <div class="flex-col">
     <h5>h5</h5>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail7">Email address</label>
   </div>
   <div class="flex-col">
     <h5>h5</h5>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail7" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <h5>h5</h5>
@@ -682,11 +682,11 @@
   </div>
   <div class="flex-col">
     <p class="p-muted-heading">Muted</p>
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail8">Email address</label>
   </div>
   <div class="flex-col">
     <p class="p-muted-heading">Muted</p>
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail8" placeholder="Email" autocomplete="email">
   </div>
   <div class="flex-col">
     <p class="p-muted-heading">Muted</p>
@@ -1479,11 +1479,11 @@
     </select>
   </div>
   <div class="col-2 col-medium-2 col-small-2">
-    <label for="exampleInputEmail1">Email address</label>
+    <label for="exampleInputEmail9">Email address</label>
     <p>This is a paragraph</p>
   </div>
   <div class="col-2 col-medium-2 col-small-2">
-    <input type="text" id="exampleInputEmail1" placeholder="Email">
+    <input type="email" id="exampleInputEmail9" placeholder="Email" autocomplete="email">
     <p>This is a paragraph</p>
   </div>
   <div class="col-2 col-medium-2 col-small-2">
