--- a/templates/docs/examples/base/forms/form.html
+++ b/templates/docs/examples/base/forms/form.html
@@ -6,13 +6,13 @@
 {% block content %}
 <form>
   <label for="exampleInputEmail1">Email address</label>
-  <input type="text" id="exampleInputEmail1" name="exampleInputEmail1" placeholder="example@canonical.com">
+  <input type="email" id="exampleInputEmail1" name="exampleInputEmail1" placeholder="example@canonical.com" autocomplete="email">
   <label for="exampleInputPassword1">Password</label>
-  <input type="password" id="exampleInputPassword1" name="exampleInputPassword1" placeholder="******">
+  <input type="password" id="exampleInputPassword1" name="exampleInputPassword1" placeholder="******" autocomplete="current-password">
   <label for="exampleInputFile">File input</label>
   <input type="file" id="exampleInputFile" name="exampleInputFile">
   <input type="checkbox" id="CheckMe" name="CheckMe">
   <label for="CheckMe">I agree to receive information about Canonical’s products and services.</label>
-  <button type="submit">Submit</button>
+  <button type="submit" name="submit">Submit</button>
 </form>
 {% endblock %}
