--- a/templates/docs/examples/patterns/search-box/default.html
+++ b/templates/docs/examples/patterns/search-box/default.html
@@ -5,12 +5,12 @@
 
 {% block content %}
 <form class="p-search-box">
-  <input aria-label="search" type="search" class="p-search-box__input" name="search" placeholder="Search" required>
+  <input type="search" class="p-search-box__input" name="search" placeholder="Search" required autocomplete="on">
   <button type="reset" class="p-search-box__reset"><i class="p-icon--close"></i></button>
   <button type="submit" class="p-search-box__button"><i class="p-icon--search"></i></button>
 </form>
 <form class="p-search-box">
-  <input aria-label="search" type="search" class="p-search-box__input" name="search" placeholder="Search" required disabled>
+  <input type="search" class="p-search-box__input" name="search" placeholder="Search" required autocomplete="on" disabled>
   <button type="reset" class="p-search-box__reset" disabled><i class="p-icon--close"></i></button>
   <button type="submit" class="p-search-box__button" disabled><i class="p-icon--search"></i></button>
 </form>
