--- a/templates/index.html
+++ b/templates/index.html
@@ -206,7 +206,7 @@
       <form action="//canonical.us3.list-manage.com/subscribe/post?u=56dac47c206ba0f58ec25f314&amp;id=36f7d8394e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="p-form">
         <div class="p-form__group">
           <label for="mce-EMAIL">Email address</label>
-          <input type="email" value="" name="EMAIL" placeholder="vanilla@example.com" id="mce-EMAIL" aria-label="Email address" required />
+          <input type="email" value="" name="EMAIL" placeholder="vanilla@example.com" id="mce-EMAIL" aria-label="Email address" autocomplete="email" required />
           <input class="u-off-screen" aria-hidden="true" type="text" name="b_56dac47c206ba0f58ec25f314_36f7d8394e" tabindex="-1" value="" />
           <p class="p-form-help-text">Know about new releases, features, blog posts, calls&#8209;for&#8209;help&nbsp;and more.</p>
         </div>
