--- a/templates/docs/examples/patterns/forms/_form-stacked.html
+++ b/templates/docs/examples/patterns/forms/_form-stacked.html
@@ -7,11 +7,7 @@
 
     <div class="col-8">
       <div class="p-form__control">
-<<<<<<< HEAD
-        <input type="text" id="full-name-stacked" name="fullName" required>
-=======
-        <input type="text" id="full-name-stacked" autocomplete="name" required>
->>>>>>> add autocomplete and fix types in a few places
+        <input type="text" id="full-name-stacked" name="fullName" autocomplete="name" required>
       </div>
     </div>
   </div>
